unpackaged/main/default/objects/User_Role__c/fields/Assigned_POD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_POD__c</fullName>
    <label>Assigned POD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>