unpackaged/main/default/objects/User_Role__c/fields/Coordinator_Captain__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Captain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected it indicates that TaxRes Coordinator is a Captain.</description>
    <label>Coordinator Captain</label>
    <type>Checkbox</type>
</CustomField>