unpackaged/main/default/objects/User_Role__c/fields/Out_of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office__c</fullName>
    <description>This will tell if user in a particular user role is OOO or not</description>
    <formula>User__r.Out_Of_Office__c</formula>
    <label>Out of Office</label>
    <type>Checkbox</type>
</CustomField>