unpackaged/main/default/objects/User_Role__c/fields/POD_Captain__c.field-meta.xml
<CustomField>
    <fullName>POD_Captain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Tex Res Functionality</description>
    <label>POD Captain</label>
    <type>Checkbox</type>
</CustomField>