unpackaged/main/default/objects/User_Role__c/fields/Selected_Regions_Id__c.field-meta.xml
<CustomField>
    <fullName>Selected_Regions_Id__c</fullName>
    <label>Selected Regions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>