unpackaged/main/default/objects/User_Role__c/fields/User_Skill_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Skill_Team__c</fullName>
    <description>FW: Hold the team of Skills user have</description>
    <label>User Skill Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Advocate</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer Advocate</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer Facilitator</fullName>
            </value>
            <value>
                <fullName>Benefit Transfer</fullName>
            </value>
            <value>
                <fullName>Benefits Advising</fullName>
            </value>
            <value>
                <fullName>Account Specialist</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Carrier IO</fullName>
            </value>
            <value>
                <fullName>BYB Advocate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>